removed sample code and added function names

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Mute tabs in background</title>
     <style>
       body {
         min-width: 357px;
@@ -26,6 +26,10 @@
     <script src="popup.js"></script>
   </head>
   <body>
+  <form action="">
+      <input type="checkbox" name="activatemuting" value="value">Activate Muting<br>
+  </form>
+  
   </body>
 </html>
 
