--- a/popup.html
+++ b/popup.html
@@ -23,13 +23,12 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
-    <script src="popup.js"></script>
   </head>
   <body>
-  <form action="">
-      <input type="checkbox" name="activatemuting" value="value">Activate Muting<br>
-  </form>
-  
+     <div class="menu" >
+         <input type="checkbox" id="showAlert" name="showAlert"/>
+         <label for="showAlert"><nobr>Show Alert</nobr></label></div> 
+    <script src="popup.js"></script>
   </body>
 </html>
 
